# Automl-studio

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_automl.py
api/: app.py
data/raw/: sample.csv
src/: config.py  data_loader.py  evaluator.py  feature_engineer.py  model_registry.py  preprocess.py  trainer.py  tuner.py  utils.py
tests/: test_preprocess.py
ui/: app.py
