[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-studio"
version = "0.1.0"
description = "A professional-grade AutoML studio for automated model training and evaluation."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "fastapi",
    "uvicorn",
    "streamlit",
    "shap",
    "matplotlib",
    "category_encoders",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
automl-studio = "run_automl:main"
